<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Basna Sejahtera</string>
    <string name="signup">Simpan</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Wujudkan rumah impian anda di Perumahan Basna Sejahtera! Segera pesan rumah sekarang juga sebelum kehabisan!</string>
    <string name="title_welcome_page">Selamat datang di Aplikasi Perumahan Basna Sejahtera!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="copyright">© 2023 PT BAS</string>
    <string name="logo_login">Logo Login</string>
    <string name="enter_format_email">Masukkan format email dengan benar</string>
    <string name="password_validation">Minimal 8 karakter</string>
    <string name="nik_validation">Minimal 16 digit</string>
    <string name="noHp_validation">Minimal 11 digit</string>
    <string name="message_login">Sudah memiliki akun?</string>
    <string name="login_here">Masuk disini</string>
    <string name="forgot_password">Lupa akun anda?</string>
    <string name="call_admin">Hubungi Admin</string>
    <string name="fab_home">"FAB Logout "</string>
    <string name="logout_success">Logout Berhasil</string>
    <string name="login_success">Login Berhasil</string>
    <string name="data_name">Blok Rumah</string>
    <string name="signup_success">Berhasil mendaftarkan akun!</string>
    <string name="house_image">House Image</string>
    <string name="user_image">User Image</string>
    <string name="progress">Progress Pembangunan</string>
    <string name="new_progress">Progress Pembangunan Terbaru</string>
    <string name="new_detail_progress">Detail Progress Pembangunan Terbaru</string>
    <string name="update_progress_pembangunan">Update Progress</string>
    <string name="progressNew">Masukkan Progress Terbaru</string>
    <string name="role_admin">Admin</string>
    <string name="role_pegawai">Pegawai</string>
    <string name="role_konsumen">Konsumen</string>
    <string name="role_pengawas">Pengawas</string>
    <string name="wrong_password_and_email">Email atau kata sandi salah</string>
    <string name="login_failed">Gagal Login</string>
    <string name="tipe_rumah">Tipe Rumah</string>
    <string name="price">harga</string>
    <string name="NIK">NIK</string>
    <string name="noTelp">No HP</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="alamat">Alamat</string>
    <string name="logo_app">Logo App</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="logo_image">Logo Image</string>
    <string name="select_here">Pilih disini</string>
    <string name="dropdown_image">Dropdown Image</string>
    <string name="success_update_status_pembangunan">Berhasil Update Data</string>
    <string name="update_failed">Gagal Update Data</string>
    <string name="img_progress">Image Progress Pembangunan</string>
    <string name="last_update">Terakhir Update</string>
    <string name="persentase">Persentase Progress Pembangunan :</string>
    <string name="detail_progress">Detail Progress Pembangunan : </string>
    <string name="detail_rumah_saya">Detail Data Rumah Saya</string>
    <string name="detail_rumah">Detail Data Rumah</string>
    <string name="btn_progress">Lihat Progress Pembangunan</string>
    <string name="signup_failed">Akun sudah ada</string>
    <string name="status_rumah">Status Rumah</string>
    <string name="booking_nominal">Nominal Booking</string>
    <string name="booking_nominal_new">Masukkan Nominal Booking</string>
    <string name="booking_date">Tanggal Booking</string>
    <string name="select_booking_date">Pilih Tanggal Booking</string>
    <string name="status_terjual">terjual</string>
    <string name="status_diBooking">di booking</string>
    <string name="status_belumTerjual">belum terjual</string>
    <string name="change_status_rumah">Ubah Status Rumah</string>
    <string name="select_new_status_rumah">Pilih Status Rumah yang terbaru</string>
    <string name="select_konsumen">Pilih Akun Konsumen</string>
    <string name="open_camera">Ambil Gambar Terbaru Disini</string>
    <string name="no_permission">Tidak mendapatkan izin untuk membuka kamera</string>
    <string name="date_image">Date Image</string>
    <string name="update_data_booking">Update Data Booking</string>
    <string name="manage_account">Kelola Akun</string>
    <string name="panduan">Panduan</string>
    <string name="new_account">Tambah Akun Baru</string>
    <string name="logout_message">Anda yakin ingin mengeluarkan akun?</string>
    <string name="logout">Logout</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="network_error">Cek koneksi anda</string>
    <string name="empty_image">Silahkan ambil gambar terlebih dahulu</string>
    <string name="select_progress">Pilih Progress Terbaru Disini</string>
    <string name="empty_progress">Silahkan Pilih Progress Pembangunan terlebih dahulu</string>

    <string-array name="data_photo">
        <item>https://cdn-icons-png.flaticon.com/256/126/126496.png</item>
        <item tools:ignore="TypographyDashes">https://img.icons8.com/ios-glyphs/256/man-on-phone--v1.png</item>
        <item>https://img.icons8.com/ios-filled/256/user-manual.png</item>
    </string-array>

    <string-array name="data_photo_admin">
        <item>https://cdn-icons-png.flaticon.com/256/2990/2990003.png</item>
        <item>https://cdn-icons-png.flaticon.com/256/748/748137.png</item>
        <item>https://cdn-icons-png.flaticon.com/256/2666/2666404.png</item>
    </string-array>

    <string-array name="data_photo_pengawas">
        <item>https://cdn-icons-png.flaticon.com/256/2990/2990003.png</item>
    </string-array>

    <string-array name="data_home_konsumen">
        <item>Rumah Saya</item>
        <item>Hubungi Admin</item>
        <item>Panduan</item>
    </string-array>

    <string-array name="data_home_admin">
        <item>Update Status Booking</item>
        <item>Tambah Akun Baru</item>
        <item>Kelola Akun</item>
    </string-array>

    <string-array name="data_home_pengawas">
        <item>Update Status Pembangunan</item>
    </string-array>

    <string-array name="data_photo_panduan">
        <item>https://cdn-icons-png.flaticon.com/256/126/126496.png</item>
        <item tools:ignore="TypographyDashes">https://img.icons8.com/ios-glyphs/256/man-on-phone--v1.png</item>
        <item>https://cdn-icons-png.flaticon.com/256/9883/9883203.png</item>
    </string-array>

    <string-array name="data_panduan">
        <item>Data Rumah Saya</item>
        <item>Hubungi Admin</item>
        <item>Logout / Keluar Akun</item>
    </string-array>

    <string-array name="data_detail_panduan">
        <item>Menu ini berfungsi untuk melihat data rumah yang telah konsumen booking ataupun beli. Pada menu ini terdapat data rumah dan data konsumen serta informasi progress pembangunan perumahan, seperti gambar progress pembangunan rumah beserta persentase dan detail pengerjaan nya.</item>
        <item>Menu ini berfungsi untuk menghubungi admin melalui aplikasi pihak ketiga yaitu WhatsApp, ketika menu ini di klik maka akan langsung dialihkan ke nomor WhatsApp Admin.</item>
        <item>Menu ini berfungsi untuk mengeluarkan akun yang anda gunakan saat ini, dan ketika anda klik menu ini maka akan langsung dialihkan ke halaman selamat datang.</item>
    </string-array>

    <integer-array name="persentase_progress">
        <item>12</item>
        <item>41</item>
        <item>50</item>
        <item>74</item>
        <item>91</item>
        <item>97</item>
        <item>100</item>
    </integer-array>

    <string-array name="detail_progress">
        <item>
            Persiapan Lahan / Kavling\n
            1) Pembuatan Bowplank\n
            2) Galian Pondasi\n
            3) Pasang Cerucup Gelam\n
            4) Pasang Baru Pondasi\n
            5) Penimbunan Pondasi\n
            6) Pasang Besi Sloof / Cor Sloof\n
            7) Pasang Besi / Behel Tiang Kolom
        </item>
        <item>
            Pemasangan Dinding\n
            1) Pasang Dinding Batu Bata\n
            2) Cor Tiang Kolom\n
            3) Pasang Kusen Pintu / Jendela\n
            4) Pasang Besi Ring Balok / Cor\n
            5) Pasang Dinding Tebeng Layar
        </item>
        <item>
            Pemasangan Rangka Atap / Multiroof\n
            1) Pemasangan Rangka Baja\n
            2) Pemasangan Atap Seng Multiroof\n
            3) Pemasangan Lisplang
        </item>
        <item>
            Plester Dinding / Pengecatan Dinding\n
            1) Plester Dinding / Plamir Dinding\n
            2) Cat Tembok Dinding / Cat Pintu dan Jendela\n
            3) Pasang Kunci Pintu dan Jendela
        </item>
        <item>
            Pemasangan Keramik\n
            1) Pengecoran Lantai dan Teras\n
            2) Pemasangan Keramik Lantai dan WC
        </item>
        <item>Pembuatan Gali Sumur</item>
        <item>Pemasangan Instalasi Listrik</item>
    </string-array>
</resources>