<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activity.DetailActivity">

    <ImageView
        android:id="@+id/ivHouse"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/house_image"
        android:src="@drawable/house"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBlok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHouse"
        tools:text="@string/data_name" />

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tvTipeRumah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBlok"
        tools:text="@string/progress" />

    <TextView
        android:id="@+id/tvTipeRumah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tvPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProgress"
        tools:text="@string/tipe_rumah" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tvStatusBooking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTipeRumah"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/tvStatusBooking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNominal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice"
        tools:text="@string/status_rumah" />

    <TextView
        android:id="@+id/tvNominal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTanggal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatusBooking"
        tools:text="@string/booking_nominal" />

    <TextView
        android:id="@+id/tvTanggal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tvNama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNominal"
        tools:text="@string/booking_date" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNIK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTanggal"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tvNIK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNama"
        tools:text="@string/NIK" />

    <TextView
        android:id="@+id/tvTelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tvPekerjaan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNIK"
        tools:text="@string/noTelp" />

    <TextView
        android:id="@+id/tvPekerjaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tvAlamat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTelp"
        tools:text="@string/pekerjaan" />

    <TextView
        android:id="@+id/tvAlamat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPekerjaan"
        tools:text="@string/alamat" />

    <Button
        android:id="@+id/progressBtn"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btn_progress"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlamat" />

    <ProgressBar
        android:id="@+id/progressLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>