<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.activity.UpdateBookingAdminActivity">

    <TextView
        android:id="@+id/tvNomorRumah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tvStatusBooking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/data_name" />

    <TextView
        android:id="@+id/tvStatusBooking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNomorRumah"
        tools:text="@string/status_rumah" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatusBooking"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tvStatusBooking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNama"
        tools:text="@string/email" />

    <Button
        android:id="@+id/selectKonsumenButton"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/select_konsumen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvTanggalBooking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/nominalBookingEditTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectKonsumenButton"
        tools:text="@string/booking_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nominalBookingEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvUbahStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTanggalBooking">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nominalBookingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="1"
            android:fontFamily="@font/poppins"
            android:hint="@string/booking_nominal_new"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvUbahStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/select_new_status_rumah"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/rg_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nominalBookingEditTextLayout" />

    <RadioGroup
        android:id="@+id/rg_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/background"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUbahStatus">

        <RadioButton
            android:id="@+id/rb_terjual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/status_terjual"
            android:textColor="?android:textColorPrimary" />

        <RadioButton
            android:id="@+id/rb_diBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/status_diBooking"
            android:textColor="?android:textColorPrimary" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_status">

        <ImageButton
            android:id="@+id/btn_once_date"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/date_image"
            android:src="@drawable/ic_date_range_black" />

        <TextView
            android:id="@+id/tv_once_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/select_booking_date"
            android:textColor="?android:textColorPrimary"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNewStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/rg_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nominalBookingEditTextLayout" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/signup"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/progressLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>